welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:20: error: Boolean does not take parameters
		{
                ^