welcome.lessons.welcome.loopdowhile.Poucet.scala.code
var nbBiscuits:Int = 0

while(!sortieTrouvee)
{

for(c <- 1 to 5)
{
	if(estSurBiscuit)
	{
	nbBiscuits = nbBiscuits + 1
	}
	avance()
}
		if(nbBiscuits >= 3)
		{
			droite();
		}
		else(nbBiscuits < 3)
		{
			gauche()
		}
}